cmc/cmc_grammar
program
  : new_line statement LINE program
  | 

new_line
  : LINE new_line
  | 

statement
  : LABEL
  | instruction
  | GO NUM
  | PUT data
  | WORD EQ data

data
  : NUM
  | NUM data
  | STR
  | STR data
  | WORD

byte
  : NUM
  | STR

instruction
  : ADD REG REG
  | SUB REG REG
  | MUL REG REG
  | DIV REG REG
  | SHL REG NUM
  | SHR REG NUM
  | AND REG REG
  | ORR REG REG
  | XOR REG REG
  | NOT REG
  | PSH REG
  | POP REG
  | CAL address
  | RET
  | JMP address
  | JIF FLAG NUM address
  | LOD REG address
  | LOD REG address offset
  | LDI REG byte
  | STO REG address
  | STO REG address offset
  | INC REG
  | DEC REG
  | CMP REG REG
  | NOP
  | HLT
  | MOV REG REG
  | RTI
  | SEI
  | CLI

address
  : WORD
  | NUM

offset
  : [ NUM ]
  | [ WORD ]
  | [ WORD offset ]
